--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -1,16 +1,19 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
         <meta charset="UTF-8">
         <title>Polls</title>
     </head>
     <body>
         {% if latest_question_list %}
-            <u>
+            <ul>
             {% for question in latest_question_list %}
                 <li><a href = "{% url 'polls:detail' question.id %}">{{ question.question_text }}</a> </li>
             {% endfor %}
-            </u>
+            </ul>
         {% else %}
             <p>No polls are available.</p>
         {% endif %}
